# clara-code

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.combined  README.md  biome.json  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vercel.json  wrangler.toml
.claude/: .telemetry-cache.json  AGENT-ORCHESTRATION-ARCHITECTURE.md  AGENT-ORCHESTRATION-V1.7.0-RELEASE.md  AUTOMATIC-SESSION-STARTUP-IMPLEMENTATION.md  BOOTSTRAP-PROJECT-DEVELOPMENT-THREAD.md  BOOTSTRAP-PROJECT-SUMMARY.md  CHANGELOG.md  CLAUDE.md  COMMAND-CONSOLIDATION-PLAN.md  MOCKUP-TO-PRODUCTION-STRATEGY.md  PORT_MANAGEMENT.md  TEMPLATE_VARIABLES.md  mcp.json  org-gate.sh  port-management.sh  port-manager.sh  port-registry.json  session-detector.js  session-hooks.json  session-integration.md  settings.json  telemetry-reporter.js  test-session-startup.js
.cursor/: .sync-metadata.json  CLAUDE.md  mcp.json
.github/: CHANGELOG.md  thin-client-forbidden.txt
.husky/: pre-commit
apollo-router/: README.md  clara-core.graphql  clerk-auth.graphql  gateway-connect.graphql  router.yaml  supergraph-schema.graphql  supergraph.yaml
backend/: .env.example  .env.local.example  .gitignore  .sequelizerc  CHANGELOG.md  nodemon.json  (+7 more)
desktop/src-tauri/: Cargo.toml  tauri.conf.json  voice-overlay.js
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/scaffold/: global-shortcut.md  tray-menu.md
desktop/src-tauri/src/: lib.rs  main.rs
(+1373 files in other folders)
