[package]
name = "clara-code-desktop"
version = "0.1.0"
description = "Clara Code desktop shell (Tauri)"
authors = ["Clara Code"]
edition = "2021"

[lib]
name = "clara_code_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
